--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,16 +4,30 @@ on:
   push:
 
 jobs:
-  s3ls:
+  push:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     steps:
+      - uses: actions/checkout@v3
+
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: 'ap-northeast-1' # リージョンを指定
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }} # 作成した IAM ロールの ARN
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
 
-      # プライベートな S3 バケットを読み取ってみる
-      - run: aws s3 ls s3://github-oidc-example
+      - uses: aws-actions/amazon-ecr-login@v1
+        id: login-ecr # outputs で参照するために id を設定
+
+      - name: build and push docker image to ecr
+        env:
+          # ECR レジストリを `aws-actions/amazon-ecr-login` アクションの `outputs.registry` から取得
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          # イメージを push する ECR リポジトリ名
+          REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
+          # 任意のイメージタグ
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build . --tag ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}
+          docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}
